--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                  
                  <button type="button" class="btn btn-info btn-lg text-light mt-4" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    Get Started
+                  Get Started
                   </button>
                   
 
@@ -101,7 +101,7 @@
 
             <div class="row justify-content-evenly mt-5">
 
-                    <div class="card col-lg-3 col-md-5 border-0 mb-4" data-aos="slide-right"  data-aos-easing="ease-in-out">
+                    <div class="card col-lg-3 col-md-5 border-0 mb-4" data-aos="zoom-in-up"  data-aos-easing="ease-in-out">
                         <img class="card-img-top w-75 h-100 mx-auto" src="images/communication.jpg" alt="Card image cap">
                         <div class="card-body text-center">
                           <h5 class="card-title">Communications</h5>
@@ -119,7 +119,7 @@
                         </div>
                     </div>
 
-                    <div class="card col-lg-3 col-md-5 border-0 mb-4" data-aos="slide-left"  data-aos-easing="ease-in-out">
+                    <div class="card col-lg-3 col-md-5 border-0 mb-4" data-aos="zoom-in-up"  data-aos-easing="ease-in-out">
                         <img class="card-img-top w-75 h-75 mx-auto" src="images/happy.jpg" alt="Card image cap">
                         <div class="card-body text-center">
                           <h5 class="card-title">Happy Customers</h5>
@@ -209,14 +209,14 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact" class="bg-light py-5" data-aos="fade-up" data-aos-easing="ease-in-out">
+    <section id="contact" class="bg-light py-5 position-relative" data-aos="fade-up" data-aos-easing="ease-in-out">
         <div class="container">
             <h2 class="text-center">Get In Touch</h2>
             <hr class="w-25 mx-auto">
 
-            <div class="d-md-flex pt-4 justify-content-around align-items-center">
+            <div class="d-md-flex pt-4 justify-content-around align-items-center py-5">
                 <div class="w-100 d-flex justify-content-center align-items-center" data-aos="slide-up"  data-aos-easing="ease-in-out"><img class="img-fluid w-75 mx-auto" src="images/contat.svg" alt="Contact"></div>
-                <form class="w-100" data-aos="zoom-in"  data-aos-easing="ease-in-out">
+                <form  target="_blank" class="w-100 pb-5 pb-lg-2" data-aos="zoom-in"  data-aos-easing="ease-in-out">
                     <div class="form-group mb-3">
                         <label for="name">Name:</label>
                         <input type="text" class="form-control" id="name" placeholder="Enter your name">
@@ -232,22 +232,77 @@
                     <button type="submit" class="btn btn-info text-light">Submit</button>
                   </form>
             </div>
+        </div>  
+
+            <!-- Newsletter -->
+    <section class="newsletter w-100 position-absolute" data-aos="fade-up">
+      <div class="container-sm">
+        <div class="w-100 bg-info m-auto px-5 py-4 py-lg-5 rounded-5 d-lg-flex justify-content-between gap-3">
+          <h3 class="w-50 m-lg-auto pb-2 text-dark">Subscribe to our news</h3>
+          <input class="border-0 rounded-pill outline w-100 px-4 py-3 mb-2 mb-lg-0" type="text" placeholder="Enter your email">
+          <button class="btn btn-md btn-dark d-block ">Subscribe</button>
         </div>
+      </div>
+    </section>
+
     </section>
 
 
-    <footer class="bg-dark pt-5 pb-2 text-white text-center position-relative">
-        <div class="container">
-            <p>Copyright &copy; 2023 Dixit Desai</p>
-
-            <a href="#" class="position-absolute bottom-0 end-0 pt-5 pb-3 px-5 text-secondary">
-                <i class="bi bi-arrow-up-circle"></i>
-            </a>
+    <footer class="bg-dark py-5 text-white text-center mt-5 mt-md-0">
+        <div class="container pt-5">
+          <div class="row justify-content-center m-auto justify-content-md-between py-5">
+          <div class="col-md-2">
+            <h1 class="text-center text-md-start mx-auto">Footer</h1>
+            <ul class="d-flex social-icons gap-3 p-0 justify-content-center justify-content-md-start">
+              <li><i class="bi bi-facebook fs-4"><a href="#"></a></i></li>
+              <li><i class="bi bi-twitter fs-4"><a href="#"></a></i></li>
+              <li><i class="bi bi-instagram fs-4"><a href="#"></a></i></li>
+              <li><i class="bi bi-linkedin fs-4"><a href="#"></a></i></li>
+            </ul>
+          </div>
+          <div class="col-md-8 row justify-content-center">
+             <div class="col-lg-3 col-5 p-0">
+                <ul class="text-start">
+                  <li class="pt-4 pb-2"> <h5>RESOURCES</h5></li>
+                  <li class="p-0">Application</li>
+                  <li>Docs</li>
+                  <li>Systems</li>
+                  <li>FAQ</li>
+                </ul>
+             </div> 
+             <div class="col-lg-3 col-5 p-0">
+              <ul class="text-start">
+                <li class="pt-4 pb-2"><h5>PRICING</h5></li>
+                <li>Overview</li>
+                <li>Premium Plans</li>
+                <li>Affiliate Program</li>
+                <li>Promotions</li>
+              </ul>
+             </div> 
+             <div class="col-lg-3 col-5 p-0">
+              <ul class="text-start">
+                <li class="pt-4 pb-2"> <h5>COMPANY</h5></li>
+                <li>About Us</li>
+                <li>Blog</li>
+                <li>Partnerships</li>
+                <li>Careers</li>
+                <li>Press</li>
+              </ul>
+             </div> 
+             <div class="col-lg-3 col-5 p-0">
+              <ul class="text-start">
+                <li class="pt-4 pb-2"> <h5>SOCIAL</h5></li>
+                <li>Facebook</li>
+                <li>Twitter</li>
+                <li>Instagram</li>
+                <li>Linkedln</li>
+              </ul>
+             </div> 
+          </div>
+          </div>
+          <p class="text-secondary">Copyright &copy; 2023 Dixit Desai All Rights Reserved </p>
         </div>
     </footer>
-
-
-
 
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal" tabindex="-1">
