--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="position-relative">
 
     <!-- Navbar -->
     <nav class="navbar navbar-nav navbar-expand-lg bg-dark navbar-dark sticky-top">
@@ -304,6 +304,12 @@
         </div>
     </footer>
 
+
+    <a href="#" class="position-fixed bottom-0 end-0 pt-5 pb-3 px-5 text-secondary d-none d-md-block">
+      <i class="bi bi-arrow-up-circle fs-2 opacity-25"></i>
+    </a>
+    
+
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal" tabindex="-1">
                         <div class="modal-dialog">
@@ -346,6 +352,7 @@
                         </div>
                       </div>
 
+              
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
@@ -353,3 +360,4 @@
     </script>
 </body>
 </html>
+
