--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
               <li><i class="bi bi-linkedin fs-4"><a href="#"></a></i></li>
             </ul>
           </div>
-          <div class="col-md-8 row justify-content-center">
+          <div class="col-md-8 row justify-content-between justify-content-md-center">
              <div class="col-lg-3 col-5 p-0">
                 <ul class="text-start">
                   <li class="pt-4 pb-2"> <h5>RESOURCES</h5></li>
